tests/expectations/compiler/core/algorithms/pedersen128_commit_to_group.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `address` was found.
    --> compiler-test:29:53
     |
  29 |         let a: group = Pedersen128::commit_to_group(addr_value, scalar_value);
     |                                                     ^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `field` was found.
    --> compiler-test:31:53
     |
  31 |         let c: group = Pedersen128::commit_to_group(field_value, scalar_value);
     |                                                     ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `group` was found.
    --> compiler-test:32:53
     |
  32 |         let d: group = Pedersen128::commit_to_group(group_value, scalar_value);
     |                                                     ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `scalar` was found.
    --> compiler-test:41:53
     |
  41 |         let o: group = Pedersen128::commit_to_group(scalar_value, scalar_value);
     |                                                     ^^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `Foo` was found.
    --> compiler-test:43:53
     |
  43 |         let p: group = Pedersen128::commit_to_group(Foo { a: 1u32, b: 1u32 }, scalar_value);
     |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^
"""]
